--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "puppeteer": "^10.4.0"
   },
   "dependencies": {
+    "console-table-printer": "^2.10.0",
     "dotenv": "^10.0.0",
     "make-dir": "^3.1.0"
   }
